[tool.poetry]
name = "video-capture-cast"
version = "0.1.0"
description = ""
authors = ["Anthony Brew <atbrew@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
opencv-python = "^4.7.0"
PyChromecast = "^13.0.7"
Flask = "^2.3.1"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pyaudio = "^0.2.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

